local/etc/test/network.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: pgpods-network
  namespace: pgpods
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              pgpods-network: "true"
  podSelector:
    matchLabels:
      pgpods-network: "true"
