local/etc/test/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: pgpods-service
  namespace: pgpods
  labels:
    app: pgpods 
spec:
  clusterIP: None
  selector:
  ports:
    - port: 5432
      name: pgpods-port
  selector:
    app: pgpods
